<resources>
    <string name="app_name">掌上论坛</string>
    <string name="main_home">首页</string>
    <string name="main_mine">我的</string>
    <string name="main_promotion">推广挣钱</string>
    <string name="login_login">登录</string>
    <string name="login_enter_email">请输入邮箱</string>
    <string name="login_enter_pwd">请输入密码</string>
    <string name="login_enter_code">请输入验证码</string>
    <string name="login_register">没有账号，注册</string>
    <string name="login_forget_pwd">忘记密码？</string>
    <string name="login_success">登录成功</string>
    <string name="register_register">注册</string>
    <string name="register_enter_email">@string/login_enter_email</string>
    <string name="register_enter_pwd">请输入密码，不少于6位</string>
    <string name="register_enter_referral_code">请输入邀请码，选填项</string>
    <string name="register_read_agree">我已阅读并同意</string>
    <string name="register_protocol"><u>《用户注册协议》</u></string>
    <string name="register_login">已有账号，登录</string>
    <string name="register_verify_code">请输入验证码</string>
    <string name="email_verify">验证邮箱</string>
    <string name="email_verify_info">邮箱：%1$s</string>
    <string name="email_verify_obtain_code">获取验证码</string>
    <string name="email_verify_email_code">请输入邮箱验证码</string>
    <string name="email_verify_backwards">%1$d 秒</string>
    <string name="email_verify_format_illegal">邮箱格式有误</string>
    <string name="email_verify_code_illegal">请输入邮箱验证码</string>
    <string name="email_verify_code_id_illegal">验证码错误</string>
    <string name="email_verify_success">邮箱验证成功</string>
    <string name="email_verify_tip_title">注册成功</string>
    <string name="email_verify_tip_content">验证邮箱可获得%1$s积分</string>
    <string name="email_verify_skip">跳过</string>
    <string name="email_verify_verify">邮箱验证</string>
    <string name="forget_enter_email">@string/login_enter_email</string>
    <string name="forget_enter_code">@string/login_enter_code</string>
    <string name="forget_send_code">@string/email_verify_obtain_code</string>
    <string name="forget_next_step">下一步</string>
    <string name="forget_reset_pwd">重置密码</string>
    <string name="forget_email_info">邮箱：%1$s</string>
    <string name="forget_enter_new_pwd">请输入新密码，不少于6位</string>
    <string name="forget_confirm_new_pwd">请确认新密码，不少于6位</string>
    <string name="forget_confirm">确定</string>
    <string name="forget_backwards">%1$d 秒</string>
    <string name="forget_reset_suc">密码更改成功</string>
    <string name="email_format_illegal">请输入正确的邮箱</string>
    <string name="pwd_length_not_enough">密码不可少于6位</string>
    <string name="code_not_null">请输入验证码</string>
    <string name="protocol_read_tip">请阅读协议并同意</string>
    <string name="code_send_suc">发送成功</string>
    <string name="pwd_not_equal">两次密码输入不一致</string>
    <string name="main_exit_click_tip">再点一次退出</string>
    <string name="main_nav_top_recommend">推荐</string>
    <string name="main_nav_sub_all">全部</string>
    <string name="home_cancel">取消</string>
    <string name="home_category_recommend">分类推荐</string>
    <string name="home_category_load_error">分类数据加载失败</string>
    <string name="article_list_more_ad">查看更多</string>
    <string name="article_list_composite">综合</string>
    <string name="article_list_new">最新</string>
    <string name="article_list_hot">热门</string>
    <string name="article_list_search">搜索</string>
    <string name="label_title">添加标签</string>
    <string name="label_added">已添加</string>
    <string name="label_most">最多可以添加6个标签</string>
    <string name="label_commit">确定</string>
    <string name="label_most_label">最多只能添加6个标签</string>
    <string name="label_label_search">可输入标签名称查询</string>
    <string name="label_blank">抱歉，没有相关标签</string>
    <string name="edit_title">写文章</string>
    <string name="edit_publish">发布</string>
    <string name="edit_save_draft">保存草稿</string>
    <string name="edit_enter_title">请输入标题</string>
    <string name="edit_choose_category"><color>选择分类</color></string>
    <string name="edit_add_label">添加标签</string>
    <string name="edit_enter_content">请输入正文</string>
    <string name="edit_please_choose_top_first">请先选择一级分类</string>
    <string name="edit_no_sub">该分类无二级分类</string>
    <string name="edit_choose_category_tip">请选择分类</string>
    <string name="edit_success">发布成功,扣%1$d积分</string>
    <string name="edit_save_draft_success">草稿保存成功</string>
    <string name="edit_quit_title">确定退出编辑么</string>
    <string name="edit_content_clear_tip">编辑内容将会清空</string>
    <string name="edit_modify">修改文章</string>
    <string name="edit_delete">删除文章</string>
    <string name="edit_copy">复制链接</string>
    <string name="edit_examination">审核文章</string>
    <string name="edit_report">举报文章</string>
    <string name="edit_copy_suc">复制成功</string>
    <string name="edit_delete_confirm">删除文章确认</string>
    <string name="edit_delete_suc">删除成功</string>
    <string name="edit_delete_title">《%1$s》</string>
    <string name="edit_review_title">文章已提交审核</string>
    <string name="edit_review_title_with_score">文章已提交审核,扣%1$d积分</string>
    <string name="edit_review_content">文章会尽快审核，请耐心等待。审核状态请留意站内信息或邮件通知。</string>
    <string name="edit_review_cancel">返回首页</string>
    <string name="edit_review_visit">查看文章</string>
    <string name="edit_hide_article">隐藏文章</string>
    <string name="edit_show_article">显示文章</string>
    <string name="edit_top_article">置顶文章</string>
    <string name="edit_hide_article_title_dialog">确定要把该文章隐藏吗？</string>
    <string name="edit_hide_article_contetn_dialog">隐藏后，文章不显示在主页列表和推荐列表</string>
    <string name="edit_cancel_hide_article">确定要取消隐藏吗？</string>
    <string name="category_title">分类选择</string>
    <string name="category_top">一级分类</string>
    <string name="category_sub">二级分类</string>
    <string name="cloud_choose_img">网盘图片选择</string>
    <string name="cloud_choose_img_hint">图片名称</string>
    <string name="cloud_choose_video">网盘视频选择</string>
    <string name="cloud_choose_video_hint">视频名称</string>
    <string name="cloud_choose_audio">网盘音频选择</string>
    <string name="cloud_choose_audio_hint">音频名称</string>
    <string name="cloud_choose_confirm_count">确定(%1$d)</string>
    <string name="cloud_choose_confirm">确定</string>
    <string name="cloud_choose_limit">最多只能选择 %1$d 张照片</string>
    <string name="mine_cloud">我的云盘</string>
    <string name="mine_notification">通知</string>
    <string name="mine_admin">版主中心</string>
    <string name="mine_invite">邀请好友</string>
    <string name="mine_invite_tip">送积分</string>
    <string name="mine_setting">设置</string>
    <string name="mine_follow">关注</string>
    <string name="mine_fans">粉丝</string>
    <string name="mine_about">关于我们</string>
    <string name="mine_data_source">当前访问</string>
    <string name="mine_login">登录</string>
    <string name="mine_rank">积分\n%1$s</string>
    <string name="mine_coin">金币\n%1$s</string>
    <string name="mine_article">%1$s\n文章</string>
    <string name="mine_review">%1$s\n评论</string>
    <string name="mine_collect">%1$s\n收藏</string>
    <string name="mine_attention">%1%s\n关注</string>
    <string name="mine_coin_format">=%1$s元</string>
    <string name="setting_title">设置</string>
    <string name="setting_account">账号</string>
    <string name="setting_password">密码</string>
    <string name="setting_set">已设置</string>
    <string name="setting_quit">退出</string>
    <string name="setting_quit_tip">您确定退出么？</string>
    <string name="setting_quit_sure">确定</string>
    <string name="setting_quit_cancel">取消</string>
    <string name="setting_verify">未验证</string>
    <string name="reset_pwd_title">修改密码</string>
    <string name="reset_pwd_old_hint">请输入旧密码</string>
    <string name="reset_pwd_new">请输入新密码，不少于6位</string>
    <string name="reset_pwd_new_confirm">请再此输入密码，不少于6位</string>
    <string name="reset_pwd_confirm">确定</string>
    <string name="reset_pwd_enter_old">请输入旧密码</string>
    <string name="reset_pwd_enter_new">请输入长度大于6的新密码</string>
    <string name="reset_pwd_enter_same">两次密码输入不一致</string>
    <string name="reset_pwd_success">密码修改成功</string>
    <string name="person_title">个人资料</string>
    <string name="person_photo">头像</string>
    <string name="person_nick">昵称</string>
    <string name="person_address">现居地</string>
    <string name="person_job">职位</string>
    <string name="person_industry">行业</string>
    <string name="person_resume">个人简历</string>
    <string name="person_nick_set">已设置</string>
    <string name="person_verify">未设置</string>
    <string name="edit_text_num_max">最多只能输入10个字哦</string>
    <string name="resume_change_title">个人简介</string>
    <string name="resume_change_hint">请输入个人简介</string>
    <string name="resume_change_empty">请输入个人简介</string>
    <string name="resume_change_success">个人简介设置成功</string>
    <string name="resume_change_num_max">最多只能输入50字哦</string>
    <string name="address_change_title">现居地</string>
    <string name="address_change_hint">请输入现居地</string>
    <string name="address_change_empty">请输入现居地</string>
    <string name="address_change_success">现居地设置成功</string>
    <string name="job_change_title">职位</string>
    <string name="job_change_hint">请输入职位</string>
    <string name="job_change_empty">请输入职位</string>
    <string name="job_change_success">职位设置成功</string>
    <string name="industry_change_title">行业</string>
    <string name="industry_change_hint">请输入行业</string>
    <string name="industry_change_empty">请输入行业</string>
    <string name="industry_change_success">行业设置成功</string>
    <string name="head_photo_change_title">设置头像</string>
    <string name="head_photo_sel_tip">请选择头像</string>
    <string name="head_photo_change_success">头像设置成功</string>
    <string name="cloud_cover_title">设置封面</string>
    <string name="cloud_cover_sel_tip">请选择封面</string>
    <string name="cloud_cover_change_success">封面设置成功</string>
    <string name="cloud_cover_change">修改封面</string>
    <string name="nick_change_title">设置昵称</string>
    <string name="nick_change_hint">请输入昵称</string>
    <string name="nick_change_empty">请输入昵称</string>
    <string name="nick_change_success">昵称设置成功</string>
    <string name="common_commit">完成</string>
    <string name="common_confirm">确定</string>
    <string name="common_cancel">取消</string>
    <string name="common_draft">草稿</string>
    <string name="common_top">置顶</string>
    <string name="common_hide">隐藏</string>
    <string name="article_detail_recommend_title">相关推荐</string>
    <string name="article_detail_review">全部评论 • %1$s</string>
    <string name="article_detail_enter_review">输入评论&#8230;</string>
    <string name="article_detail_more_review">查看更多回复 ></string>
    <string name="article_detail_review_empty">快来抢占沙发吧！</string>
    <string name="article_detail_delete_suc">删除成功</string>
    <string name="article_detail_delete_confirm">您确认要删除这条评论吗？</string>
    <string name="article_detail_download_confirm_title">下载</string>
    <string name="article_detail_download_confirm_content">下载视频需要扣%1$d积分，确定要下载吗？</string>
    <string name="article_detail_download_confirm_tip">7天内不再提示</string>
    <string name="article_detail_video_encoding">视频转码中,请稍后再播</string>
    <string name="cloud_pic">图片</string>
    <string name="cloud_video">视频</string>
    <string name="cloud_audio">音频</string>
    <string name="cloud_other">其他</string>
    <string name="cloud_cancel">取消</string>
    <string name="notification_my_article_state">我的文章审核通过/驳回</string>
    <string name="notification_my_article_state_sys">系统消息提示</string>
    <string name="notification_my_article_state_email">邮件通知</string>
    <string name="notification_new_article">有新文章需要我审核</string>
    <string name="notification_new_article_sys">系统消息提示</string>
    <string name="notification_new_article_email">邮件通知</string>
    <string name="notification_new_comment">我发布的文章有新评论</string>
    <string name="notification_new_comment_sys">系统消息提示</string>
    <string name="notification_new_reply">我发布的评论有新回复</string>
    <string name="notification_new_reply_sys">系统消息提示</string>
    <string name="notification_new_report">有新举报需要我处理</string>
    <string name="notification_my_report">我提交的举报已被处理</string>
</resources>