<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_back"
        style="@style/page_back_style" />

    <TextView
        android:id="@+id/tv_title"
        style="@style/page_title_style"
        android:text="@string/forget_reset_pwd" />

    <RelativeLayout
        android:id="@+id/rl_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_title"
        android:layout_marginTop="50dp">

        <EditText
            android:id="@+id/et_email"
            style="@style/et_style"
            android:hint="@string/forget_enter_email" />

        <EditText
            android:id="@+id/et_code"
            style="@style/et_style"
            android:layout_below="@id/et_email"
            android:layout_marginTop="22.5dp"
            android:hint="@string/forget_enter_code" />

        <TextView
            android:id="@+id/tv_next_step"
            style="@style/btn_blue_style"
            android:layout_below="@id/et_code"
            android:layout_marginLeft="27.5dp"
            android:layout_marginTop="80dp"
            android:layout_marginRight="27.5dp"
            android:text="@string/forget_next_step" />

        <TextView
            android:id="@+id/tv_send_code"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignTop="@id/et_code"
            android:layout_alignRight="@id/et_code"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/forget_send_code"
            android:textColor="@color/main_blue_color"
            android:textSize="14dp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_title"
        android:layout_marginTop="50dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_email"
            style="@style/page_sub_text_style"
            android:layout_marginLeft="27.5dp"
            android:text="@string/forget_email_info" />

        <EditText
            android:id="@+id/et_pwd_new"
            style="@style/et_style"
            android:layout_below="@id/tv_email"
            android:layout_marginTop="22.5dp"
            android:hint="@string/forget_enter_new_pwd"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/et_pwd_confirm"
            style="@style/et_style"
            android:layout_below="@id/et_pwd_new"
            android:layout_marginTop="22.5dp"
            android:hint="@string/forget_confirm_new_pwd"
            android:inputType="textPassword" />

        <ImageView
            android:id="@+id/iv_pwd_state"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignTop="@id/et_pwd_new"
            android:layout_alignEnd="@id/et_pwd_new"
            android:padding="15dp"
            android:src="@drawable/ic_pwd_show" />

        <TextView
            android:id="@+id/tv_confirm"
            style="@style/btn_blue_style"
            android:layout_below="@id/et_pwd_confirm"
            android:layout_marginLeft="27.5dp"
            android:layout_marginTop="60dp"
            android:layout_marginRight="27.5dp"
            android:text="@string/forget_confirm" />

    </RelativeLayout>

</RelativeLayout>